# simple_snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.hpp
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  snake.vcxproj  snake.vcxproj.filters  snake_game.sln
build2/snake.dir/Debug/: snake.exe.recipe  snake.ilk
build2/snake.dir/Debug/snake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
